# QuasiGameEngine

./: .gitignore  CMakeLists.txt  Makefile  README.md  memeory_management_notes.txt  notes.txt
assets/: Dragon.dds  MenuBG.dds
config/: action_map.cfg  menu.cfg
include/device_interface/: action_manager.h  device_interface.h  input.h
include/device_interface/glfw/: glfw_imgui.h  glfw_input.h  glfw_interface.h
include/input/: glfwInput.hpp  input.hpp
include/interface/: action.h  action_list.h  deviceInterface.hpp  device_interface.h  input.h  input.hpp  keyManager.hpp
include/interface/glfw/: glfwInput.hpp  glfwInterface.hpp  glfwKeyManager.hpp  glfw_input.h  glfw_interface.h
include/interface/ui/: ui_test.h
include/interface/ui/imgui/: imgui_impl_glfw_gl3.h
include/main/: EntityComponent.h  EntityComponent.hpp  main.h  main.hpp
include/renderer/: renderManager.hpp  render_config.h  render_manager.h  renderer.h  shader.h
include/renderer/glfw/: glfw_render_config.h  glfw_renderer.h
include/renderer/opengl/: opengl_buffer_manager.h  opengl_render_config.h  opengl_renderer.h  opengl_shader.h
include/resource/: image_loader.h  mesh.h  object_loader.h  resource.h  resource.hpp  resourceFileManager.hpp  resourceManager.hpp  resource_base.h  resource_file_manager.h  resource_manager.h  texture.h  texture.hpp
include/ui/: ui_test.h  user_interface.h
include/ui/imgui/: imgui_impl_glfw_gl3.h
include/utils/: fileManager.hpp  file_manager.h  file_utils.h  json_file.h  json_file_manager.h  logger.hpp  memoryManager.hpp  memory_manager.h  qge_array.h  qge_queue.h  shader.h  shader.hpp
include/utils/data_types/: qge_array.h  qge_queue.h
include/utils/jsonFileManager/: jsonArray.hpp  jsonFile.hpp  jsonFileManager.hpp  jsonUtils.hpp  json_array.h  json_file.h  json_file_manager.h  json_utils.h
include/utils/logging/: logWorker.hpp  log_capture.h  log_utils.h  log_worker.h  logger.h  logger.hpp
include/utils/memory/: allocator_potential.h  heap_allocator.h  heap_allocator_old.h  heap_block_list.h  heap_free_list.h  heap_manager.h  heap_page_list.h  memory_manager.h
libs/: CMakeLists.txt
shaders/: main.fs  main.vs  ui.fs  ui.vs
src/: CMakeLists.txt
src/device_interface/: CMakeLists.txt  action_manager.cc
src/device_interface/glfw/: glfw_imgui.cc  glfw_input.cc  glfw_interface.cc
src/input/: glfwInput.cpp  input.cpp
src/interface/: action_list.cc  action_manager.cc  deviceInterface.cpp  input.cpp  keyManager.cpp
src/interface/glfw/: glfwInput.cpp  glfwInterface.cpp  glfwKeyManager.cpp  glfw_input.cc  glfw_interface.cc
src/interface/ui/: ui_test.cc
src/interface/ui/imgui/: imgui_impl_glfw_gl3.cc
src/main/: main.cc  main.cpp
src/physics/: CMakeLists.txt
src/renderer/: CMakeLists.txt  renderManager.cpp  render_manager.cc
src/renderer/glfw/: glfw_render_config.cc  glfw_renderer.cc
src/renderer/opengl/: opengl_render_config.cc  opengl_renderer.cc  opengl_shader.cc
src/resource/: CMakeLists.txt  image_loader.cc  mesh.cc  object_loader.cc  resource.cc  resource.cpp  resourceFileManager.cpp  resourceManager.cpp  resource_base.cc  resource_file_manager.cc  resource_manager.cc  texture.cc  texture.cpp
src/ui/: CMakeLists.txt  ui_test.cc  user_interface.cc
src/ui/imgui/: imgui.cc  imgui_impl_glfw_gl3.cc
src/utils/: CMakeLists.txt  fileManager.cpp  file_manager.cc  file_utils.cc  json_file.cc  json_file_manager.cc  logger.cpp  memoryManager.cpp  memory_manager.cc  shader.cc  shader.cpp
src/utils/jsonFileManager/: jsonFile.cpp  jsonFileManager.cpp  jsonUtils.cpp  json_file.cc  json_file_manager.cc  json_utils.cc
src/utils/logging/: logWorker.cpp  log_capture.cc  log_worker.cc  logger.cc  logger.cpp
src/utils/memory/: heap_allocator_old.cc  heap_block_list.cc  heap_free_list.cc  memory_manager.cc
test/: CMakeLists.txt  main_test.cc
test/interface/: device_interface_test.cc
test/utils/memory/: heap_allocator_test.cc  heap_block_list_test.cc  heap_free_list_test.cc  heap_manager_test.cc  heap_page_list_test.cc
